--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,32 @@
+arrow==0.15.1
+astroid==2.2.5
+autopep8==1.4.4
+certifi==2019.9.11
+chardet==3.0.4
 Click==7.0
 Flask==1.1.1
+idna==2.8
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.1
+lazy-object-proxy==1.4.2
 MarkupSafe==1.1.1
+mccabe==0.6.1
 numpy==1.17.2
+oauthlib==3.1.0
 pandas==0.25.1
 plotly==4.1.1
+pycodestyle==2.5.0
+pylint==2.3.1
 python-dateutil==2.8.0
 pytz==2019.2
+requests==2.22.0
+requests-oauthlib==1.2.0
 retrying==1.3.3
 six==1.12.0
+stravalib==0.10.2
+typed-ast==1.4.0
+units==0.7
+urllib3==1.25.3
 Werkzeug==0.15.6
+wrapt==1.11.2
